[package]
name = "yew_webchat_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.19.3", features = ["csr"] } # Tentukan versi spesifik dan pastikan fitur csr ada
wasm-bindgen = "0.2.79" # Pastikan versi ini kompatibel dengan Yew 0.19.3
wasm-bindgen-futures = "0.4.29"
gloo-console = "0.2.1"
gloo-net = { version = "0.2.3", features = ["websocket"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
wasm-logger = "0.2"